[package]
name = "allpub_macro"
version = "0.1.0"
authors = ["itsyunaya <40719746+itsyunaya@users.noreply.github.com>"]
description = "A procedural macro to make all items in a module public by default."
keywords = ["proc_macro", "procmacro"]
edition = "2024"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2.0.117", features = ["full"] }

